2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: New service to advertize service
	* src/Application.cs: Added Service Locator
	* src/ServiceLocator.cs: Giver Service Locator to find giver instances
	* src/Makefile.am: ADded files that needed to be built
	* giver.mdp: Updated to mono 2.0

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: new service to advertise and transfer files
	* src/Application.cs: Started Giver Service
	* src/Makefile.am: Added service to build
	* giver.mdp: Added Avahi Dependency

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs, src/Makefile.am, src/TrayLib.cs, giver.mdp,
	  configure.ac: Added GiverService and TRayLib.cs

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Application.cs, src/Makefile.am, giver.mdp: Fixed up graphics in
	  project

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac, Makefile.am, data, data/images,
	  data/images/giver-22.png, data/images/giver-32.png,
	  data/images/giver-24.png, data/images/giver-16.png,
	  data/images/giver-44.png, data/images/Makefile.am,
	  data/Makefile.am, data/giver.desktop.in: Added image files to
	  project

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* po/POTFILES.in: updated to use the correct file

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Utilities.cs, src/Logger.cs, src/Defines.cs.in, src/Makefile.am,
	  configure.ac, Makefile.am, autogen.sh: Updated template to work
	  with giver
	* src/giver.in: created standard startup script
	* src/Application.cs: updated to work with giver
	* giver.mdp: added files

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* AUTHORS: Initial checkin of code
